--- a/config/game_bot/.env
+++ b/config/game_bot/.env
@@ -1,24 +1,7 @@
-# Intents: Server Members, Message Content
-# Scopes:
-#   bot
-#   applications.commands
-# Bot Permissions:
-#   General Permissions
-#     Manage Roles
-#     Manage Channels
-#     Manage Webhooks
-#     Read Messages/View Channels
-#   Text Permissions
-#     Send Messages
-#     Manage Messages
-#     Embed Links
-#     Attach Files
-#     Use Slash Commands
-# Invite link: https://discord.com/api/oauth2/authorize?client_id=950200845289553940&permissions=536931344&scope=bot
-GAME_BOT_TOKEN=MTI2NDM0OTc4MDcwOTA4NTMwOA.G4SGG4.y_bSalZ_K8sT9UiXHa78leu69-IeeD4BvMHKLk
-GAME_BOT_SECRET=ujqKg5cW4wGMxT4zxYWdZp_IzcWyi5M4
-
 DEBUG=TRUE
+
+# Game bot configuration
+GAME_BOT_TOKEN=<insert dicord bot token here>
 
 # Gamers service configuration
 PLATFORM_HOSTNAME='http://platform:8000'
