start game bot automaticall via docker compose

--- a/config/game_bot/.env
+++ b/config/game_bot/.env
@@ -1,7 +1,7 @@
 DEBUG=TRUE
 
 # Game bot configuration
-GAME_BOT_TOKEN=<insert dicord bot token here>
+GAME_BOT_TOKEN=<insert discord bot token here>
 
 # Gamers service configuration
 PLATFORM_HOSTNAME='http://platform:8000'
