--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,13 +16,13 @@ services:
     command: redis-server --save 20 1 --loglevel warning --requirepass password
   gamebot:
     build: game_bot
-    command: python bot.py
+    command: python main.py
     depends_on:
       - cache
       - platform
     env_file:
       - config/game_bot/.env
-    profiles: ["cli-only"]
+    #profiles: ["cli-only"]
     volumes:
       - ./game_bot:/src
   grafana:
