--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,16 @@ services:
     ports:
       - '6379:6379'
     command: redis-server --save 20 1 --loglevel warning --requirepass password
+  gameserver:
+    build: game_server
+    command: python main.py
+    restart: 'always'
+    depends_on:
+      - platform
+    env_file:
+      - config/game_server/.env
+    volumes:
+      - ./game_server:/src
   gamebot:
     build: game_bot
     command: python main.py
@@ -22,7 +32,6 @@ services:
       - platform
     env_file:
       - config/game_bot/.env
-    #profiles: ["cli-only"]
     volumes:
       - ./game_bot:/src
   grafana:
